Mixed Playground/force-app/main/default/objects/Game__c/fields/Game_Rules__c.field-meta.xml
<CustomField>
    <fullName>Game_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Rules</label>
    <referenceTo>Game_Rules__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>