Mixed Playground/force-app/main/default/objects/Game__c/fields/Have_maximum_winners__c.field-meta.xml
<CustomField>
    <fullName>Have_maximum_winners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have maximum winners?</label>
    <type>Checkbox</type>
</CustomField>