Mixed Playground/force-app/main/default/objects/Game__c/fields/Jackpot__c.field-meta.xml
<CustomField>
    <fullName>Jackpot__c</fullName>
    <label>Jackpot</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>