Mixed Playground/force-app/main/default/objects/Game__c/fields/Maximum_Winners__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Winners__c</fullName>
    <label>Maximum Winners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>