Mixed Playground/force-app/main/default/objects/Game__c/fields/Number_of_Players__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Players__c</fullName>
    <label>Number of Players</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>