Mixed Playground/force-app/main/default/objects/Game__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1- Create Game</fullName>
                <default>true</default>
                <label>1- Create Game</label>
            </value>
            <value>
                <fullName>2- Register Players</fullName>
            </value>
            <value>
                <fullName>3- Game in Progress</fullName>
            </value>
            <value>
                <fullName>4- End Game</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>